# paisa_vasool_dispute_service

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  seed_data.py
requirements/: base.txt  requirements.txt
sample_emails/: sample_clarification_for_inv_1.txt
sample_emails/testing/: testing-inv-1-followup-discount-line-items-clarification.txt
src/: redis_setup_commands.txt
src/api/rest/: app.py  dependencies.py
src/api/rest/routes/: ar_documents.py  dispute_types.py  disputes.py  gcs_test.py  invoices.py  mailboxes.py  payments.py  supporting_docs.py
src/config/: settings.py
src/constants/: enums.py
src/control/: celery_app.py  tasks.py
src/control/agents/: __init__.py  email_processing_agent.py  graph.py  state.py
src/control/agents/nodes/: __init__.py  classify_email.py  detect_context_shift.py  embed_and_search.py  extract_invoice.py  extract_text.py  fetch_context.py  generate_response.py  identify_invoice.py  persist_results.py  resolve_dispute_link.py  resolve_token.py
src/control/prompts/: __init__.py  assign_dispute_type.py  classify_email.py  detect_context_shift.py  extract_invoice.py  generate_response.py  structure_email.py  summarize_episodes.py
src/control/prompts/templates/: assign_dispute_type.poml  classify_email.poml  (+5 more)
src/core/exceptions/: errors.py
src/core/services/: ar_document_service.py  dispute_document_service.py  dispute_service.py  draft_email_service.py  gcs_service.py  imap_service.py  key_extraction_service.py  mailbox_service.py  outbound_email_service.py  smtp_service.py
src/data/migrations/: runner.py
src/data/repositories/: __init__.py  ar_document_repository.py  dispute_repository.py  email_repository.py  invoice_repository.py  mailbox_repository.py  memory_repository.py  repositories.py  user_repository.py
src/handlers/http_clients/: llm_client.py
src/observability/: __init__.py
src/schemas/: __init__.py  common_schemas.py  dispute_schemas.py  email_schemas.py  invoice_schemas.py  mailbox_schemas.py  schemas.py
(+29 files in other folders)
