[project]
name = "pv-disp-resol-dispute-resolution-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.15.2",
    "asyncpg==0.30.0",
    "bcrypt==4.3.0",
    "celery==5.5.2",
    "fastapi==0.115.12",
    "fastembed>=0.7.4",
    "google-genai>=1.65.0",
    "groq==0.22.0",
    "langchain-core==0.3.55",
    "langfuse>=3.14.5",
    "langgraph==0.3.34",
    "pgvector==0.3.6",
    "poml>=0.0.7",
    "pydantic[email]==2.11.4",
    "pydantic-settings==2.9.1",
    "pyjwt==2.10.1",
    "pypdf==5.4.0",
    "python-multipart==0.0.20",
    "redis==5.2.1",
    "reportlab>=4.4.10",
    "sqlalchemy==2.0.40",
    "uvicorn[standard]==0.34.2",
    "google-cloud-storage>=3.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "SIM", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
no_implicit_optional = true
